refactor(rag): 压缩store